# faaf

./: Cargo.toml  README.md
src/: analysis_result.rs  config.rs  gateway.rs  lib.rs  main.rs
src/config/: analyzer.rs  arguments.rs  conditions.rs  config.rs  error.rs  mod.rs
src/config/analyzer/: mod.rs  parser.rs
src/config/parser/: arguments.rs  arguments_parser.rs  base.rs  base_new.rs  base_parser.rs  conditions.rs  conditions_parser.rs  mod.rs  parser_type.rs
src/database/: database.rs  error.rs  mod.rs  result.rs
src/gateway/: error.rs  gateway.rs  mod.rs
src/gateway/dispatcher/: dispatcher.rs  error.rs  mod.rs
test_file/: config.toml  config2.toml
test_file/script/: basic_info.py
