[package]
name = "faaf"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.26"
getopts = "0.2.21"
hex = "0.4.3"
magic = "0.13.0"
serde = {version = "1.0.188", features = ["derive"]} 
toml = "0.7.6"
walkdir = "2.3.3"
