[package]
name = "faaf"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "faaf"
path = "src/lib.rs"

[[bin]]
name = "faaf"
path = "src/main.rs"

[dependencies]
chrono = "0.4.26"
getopts = "0.2.21"
hex = "0.4.3"
magic = "0.13.0"
nom = "7.1.3"
serde = {version = "1.0.188", features = ["derive"]} 
serde_json = "1.0.105"
tempfile = "3.8.0"
toml = "0.7.6"
walkdir = "2.3.3"
