[package]
name = "faaf"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "faaf"
path = "src/lib.rs"

[[bin]]
name = "faaf"
path = "src/main.rs"

[dependencies]
base64 = "0.21.4"
chrono = "0.4.26"
getopts = "0.2.21"
hex = "0.4.3"
clap = {version = "4.4.6", features = ["derive"]}
libc = "0.2.149"
libloading = "0.8.1"
magic = "0.13.0"
nom = "7.1.3"
once_cell = "1.18.0"
pyo3 = {version = "0.20.0", features= ["auto-initialize"]}
rusqlite = {version = "0.29.0", features = ["serde_json"]}
serde = {version = "1.0.188", features = ["derive"]} 
serde_json = "1.0.105"
tempfile = "3.8.0"
toml = "0.7.6"
walkdir = "2.3.3"
